<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">squint</string>
    <string name="empty"></string>


    <!-- LOGIN & SIGNUP -->
    <string name="title_login">Login</string>   
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="signup_reminder">Don\'t have an account yet?</string>
    <string name="signup">Sign up</string>
    <string name="skip"><u>Skip</u></string>
    <string name="title_signup">Sign Up</string>  
    
    
    <!-- TAB SECTION -->
    <string name="title_section1">Program</string>
    <string name="title_section2">People</string>
    <string name="title_section3">Career</string>
    <string name="title_section4">Venue</string>
    <string name="title_section5">Settings</string>
  
    <!-- PROGRAM SWITCH -->
    <string name="switch_talk">Talks</string>
    <string name="switch_poster">Posters</string>
    <string name="switch_abstract">Abstracts</string>
    
    <!-- LIST -->
    <string name="list_empty">--  No Result  --</string>
    <string name="title_conversation">Conversation</string>   
    
    
    <!-- DETAILS -->
    <string name="details">DETAILS</string>    
    <string name="contact">CONTACT</string>    
    <string name="e_mail">E-mail</string>
    <string name="website">Website</string>
    <string name="message">Message</string>
    <string name="abstract_btn">Abstract</string>
    <string name="more">more</string>
    <string name="pdf">PDF</string>
    <string name="post_by">Posted by:</string>
    <string name="unknown">(Unknown)</string>
 
    
    <!-- DETAILS (FAKE DATA) -->
    <string name="name">NAME</string>    
    <string name="author">AUTHOR</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="content">@string/description</string>
    <string name="start_time">START TIME</string> 
    <string name="position">POSITION</string>
    <string name="location">LOCATION</string>
    <string name="institution">INSTITUTION</string>
    <string name="address">1172&#8211;-1188 S San Pedro St, Los Angeles, CA 90015</string>
       
 
    
    
    <!-- SETTINGS -->
    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_about">About Us</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_terms">Privacy and Terms</string>
    <string name="action_email_us">Email Us</string>
    <string name="action_close">Close</string>
    <string name="pref_subject_about">Ashvale Digital Ltd.</string>
    <string name="pref_subject_terms">Privacy Policy and Terms of Service</string>
    <string-array name="detail_title">
        <item>@string/pref_title_about</item>
        <item>@string/pref_title_terms</item>
    </string-array>
    <string-array name="detail_subject">
        <item>@string/pref_subject_about</item>
        <item>@string/pref_subject_terms</item>
    </string-array>    
    <string-array name="detail_action">
        <item>@string/action_email_us</item>
        <item>@string/action_close</item>
    </string-array>  
    
    <!-- ERROR - NETWORK -->
    <string name="dialog_network_error_content">No internet connection. Please check your network settings</string>
    <string name="dialog_network_error_title">Network connection error</string> 
    <string name="error_payment_failed">The Payment is failed!</string>
</resources>
