<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@drawable/stage"
			  android:orientation="vertical" >
	<LinearLayout android:id="@+id/container"
			      android:layout_width="match_parent"
			      android:layout_height="wrap_content"
			      android:layout_margin="12dp"
			      android:background="@drawable/list_item"
			      android:orientation="vertical" >
		<View android:layout_width="match_parent"
		      android:layout_height="6dp"
		      android:background="@color/list_item_header" />

		<TextView
		    android:id="@+id/name"
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:layout_marginTop="20dp"
		    android:ellipsize="end"
		    android:fontFamily="sans-serif-light"
		    android:gravity="center|left"
		    android:maxLines="2"
		    android:text="@string/name"
		    android:textColor="@color/list_item_level_1"
		    android:textSize="18sp"
		    android:textStyle="bold" />

		<TextView
		    android:id="@+id/author"
		    android:layout_width="match_parent"
		    android:layout_height="24dp"
		    android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:layout_marginTop="10dp"
		    android:fontFamily="sans-serif-thin"
		    android:gravity="center|left"
		    android:maxHeight="30dp"
		    android:maxWidth="300dp"
		    android:text="@string/author"
		    android:textColor="@color/list_item_level_2"
		    android:textSize="14sp" />
		<LinearLayout android:layout_width="match_parent"
		    		  android:layout_height="24dp"
		    		  android:layout_marginBottom="6dp"
				      android:layout_marginLeft="16dp"
				      android:layout_marginRight="16dp"
				      android:layout_marginTop="12dp"
				      android:weightSum="2"
				      android:orientation="horizontal" >
			<TextView
			    android:id="@+id/author_details"
			    android:layout_width="0dip"
			    android:layout_height="24dp"
			    android:layout_weight="1"
			    android:fontFamily="sans-serif-thin"
			    android:gravity="center|left"
			    android:text="@string/details"
			    android:textColor="@color/list_action_text"
			    android:textSize="12sp" />

			<TextView
			    android:id="@+id/pdf"
			    android:layout_width="0dip"
			    android:layout_height="24dp"
			    android:layout_weight="1"
			    android:fontFamily="sans-serif-thin"
			    android:gravity="center|right"
			    android:text="@string/pdf"
			    android:textColor="@color/list_action_text"
			    android:textSize="12sp" />		
		</LinearLayout>
		


		<TextView
		    android:id="@+id/content"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="16dp"
		    android:layout_marginBottom="12dp"
		    android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:background="@drawable/diagram_roundcap"
		    android:text="@string/description"
		    android:fontFamily="sans-serif-thin"
		    android:maxLines="20"
		    android:ellipsize="end"
		    android:textColor="@color/list_item_level_1"
		    android:textSize="14sp" />
  
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	    		  android:layout_height="match_parent"
	    		  android:visibility="gone"
	    		  android:orientation="vertical" >
		<View android:layout_width="match_parent"
		      android:layout_height="6dip"
		      android:background="@android:color/white" />
	    <WebView android:id="@+id/pdf_viewer"
	        	 android:layout_width="match_parent"
	             android:layout_height="match_parent"
	             android:background="@android:color/black"
	             android:contentDescription="@string/empty" />
	</LinearLayout>
</LinearLayout>
	
